8276796: gc/TestSystemGC.java large pages subtest fails with ZGC 8269077: TestSystemGC uses "require vm.gc.G1" for large pages subtest
Reviewed-by: mbaesken
Backport-of: 91bb0d658bce010e74b248b56f0fa5b8a79e8802